--- a/templates/item/header.hbs
+++ b/templates/item/header.hbs
@@ -1,4 +1,4 @@
-<header class='eventide-sheet__header'>
+<header class='eventide-sheet__header eventide-sheet__header--item'>
   <img
     class='eventide-profile-image'
     src='{{item.img}}'
@@ -6,12 +6,12 @@
     data-action='onEditImage'
     title='{{item.name}}'
   />
-  <div class='base-form__sheet-header-fields'>
-    <div class='document-name'>
+  <div class='eventide-sheet__header-fields'>
+    <div>
       <input
         name='name'
         type='text'
-        class="base-form__text-input"
+        class="erps-input"
         value='{{item.name}}'
         placeholder='{{localize "EVENTIDE_RP_SYSTEM.Forms.Placeholders.Name"}}'
       />
@@ -19,46 +19,46 @@
     {{#if (eq item.type 'gear')}}
       <div class='grid grid-4col'>
         <div>
-          <label class='base-form__label--small'>
+          <label class='erps-input-label'>
             {{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Quantity.label'}}
           </label>
           <input
             type="number"
-            class="base-form__number-input"
+            class="erps-input"
             name="system.quantity"
             value="{{system.quantity}}"
             data-dtype="Number"
           />
         </div>
         <div>
-          <label class='base-form__label--small'>
+          <label class='erps-input-label'>
             {{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Weight.label'}}
           </label>
           <input
             type="number"
-            class="base-form__number-input"
+            class="erps-input"
             name="system.weight"
             value="{{system.weight}}"
             data-dtype="Number"
           />
         </div>
         <div>
-          <label class='base-form__label--small'>
+          <label class='erps-input-label'>
             {{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Cost.label'}}
           </label>
           <input
             type="number"
-            class="base-form__number-input"
+            class="erps-input"
             name="system.cost"
             value="{{system.cost}}"
             data-dtype="Number"
           />
         </div>
         <div>
-          <label class="base-form__label--small">
+          <label class="erps-input-label">
             {{localize 'EVENTIDE_RP_SYSTEM.Forms.Sections.ClassName'}}
           </label>
-          <select name="system.className" class="base-form__select">
+          <select name="system.className" class="erps-select">
             {{#each @root.config.classNames as |name key|}}
               <option
                 value="{{key}}"
@@ -74,12 +74,12 @@
     <div class="grid grid-2-col">
       {{#if (eq item.type 'combatPower')}}
         <div class="grid-span-2">
-          <label class='base-form__label--small'>
+          <label class='erps-input-label'>
             {{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Cost.label'}}
           </label>
           <input
             type="number"
-            class="base-form__number-input"
+            class="erps-input"
             name="system.cost"
             value="{{system.cost}}"
             data-dtype="Number"
@@ -88,56 +88,22 @@
       {{/if}}
       {{#if (not (eq item.type 'transformation'))}}
         <div>
-          <label class="base-form__label--small" for="color-textColor">
-            {{localize 'EVENTIDE_RP_SYSTEM.Item.Colors.TextColor.label'}}
-          </label>
-          <div class="base-form__color-picker-with-hex color-picker-with-hex">
-            <div class="color-picker-container">
-              <div class="color-preview" id="preview-textColor" style="background-color: {{system.textColor}}"></div>
-              <input
-                type="color"
-                class="color-picker"
-                id="color-textColor"
-                value="{{system.textColor}}"
-                name="display.textColor"
-                data-edit="system.textColor"
-              >
-              <input type="text"
-                class="hex-input"
-                id="hex-textColor"
-                placeholder="{{localize 'EVENTIDE_RP_SYSTEM.Item.Colors.TextColor.placeholder'}}"
-                value="{{system.textColor}}"
-                name="system.textColor"
-                data-edit="system.textColor"
-              >
-            </div>
-          </div>
+          {{> erps-color-picker
+            name="system.textColor"
+            value=system.textColor
+            labelPosition="above"
+            label=(localize "EVENTIDE_RP_SYSTEM.Item.Colors.TextColor.label")
+            placeholder=(localize "EVENTIDE_RP_SYSTEM.Item.Colors.TextColor.placeholder")
+          }}
         </div>
         <div>
-          <label class="base-form__label--small" for="color-bgColor">
-            {{localize 'EVENTIDE_RP_SYSTEM.Item.Colors.BgColor.label'}}
-          </label>
-          <div class="base-form__color-picker-with-hex color-picker-with-hex">
-            <div class="color-picker-container">
-              <div class="color-preview" id="preview-bgColor" style="background-color: {{system.bgColor}}"></div>
-              <input
-                type="color"
-                class="color-picker"
-                id="color-bgColor"
-                value="{{system.bgColor}}"
-                name="display.bgColor"
-                data-edit="system.bgColor"
-              >
-              <input type="text"
-                class="hex-input"
-                id="hex-bgColor"
-                placeholder="{{localize 'EVENTIDE_RP_SYSTEM.Item.Colors.BgColor.placeholder'}}"
-                value="{{system.bgColor}}"
-                name="system.bgColor"
-                data-edit="system.bgColor"
-              >
-            </div>
-          </div>
+          {{> erps-color-picker
+            name="system.bgColor"
+            value=system.bgColor
+            labelPosition="above"
+            label=(localize "EVENTIDE_RP_SYSTEM.Item.Colors.BgColor.label")
+            placeholder=(localize "EVENTIDE_RP_SYSTEM.Item.Colors.BgColor.placeholder")
+          }}
         </div>
       {{/if}}
     </div>
