--- a/src/scss/eventide-rp-system.scss
+++ b/src/scss/eventide-rp-system.scss
@@ -35,6 +35,7 @@
 @use 'components/sheet/erps-profile-images';
 @use 'components/sheet/erps-toggles';
 @use 'components/sheet/erps-inputs';
+@use 'components/sheet/erps-items-panel';
 
 // Import Google Fonts after ALL @use statements to avoid CSS parsing errors
 @import 'https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap';
@@ -54,4 +55,5 @@
   @include meta.load-css('components/sheet/erps-profile-images');
   @include meta.load-css('components/sheet/erps-toggles');
   @include meta.load-css('components/sheet/erps-inputs');
+  @include meta.load-css('components/sheet/erps-items-panel');
 }
