--- a/templates/item/attribute-parts/combat-power.hbs
+++ b/templates/item/attribute-parts/combat-power.hbs
@@ -1,22 +1,22 @@
 {{! Attributes Tab }}
-<section 
-  class='tab attributes {{tab.cssClass}}' 
-  data-group='primary' 
+<section
+  class='tab attributes {{tab.cssClass}}'
+  data-group='primary'
   data-tab='attributes'
 >
-  <div class='base-form__sheet-tabs'>
+  <div class='eventide-sheet__scrollable-container'>
     <div class='grid grid-3col'>
       <div>
-        <label class='base-form__label'>
+        <label class='erps-input-label'>
           {{localize 'EVENTIDE_RP_SYSTEM.Item.Roll.Type.label'}}
         </label>
-        <select 
-          name='system.roll.type' 
-          class="base-form__select"
+        <select
+          name='system.roll.type'
+          class="erps-select"
         >
           {{#each rollTypes as |name key|}}
-            <option 
-              value="{{key}}" 
+            <option
+              value="{{key}}"
               {{#if (eq ../system.roll.type key)}}selected{{/if}}
             >
               {{localize (lookup @root.config.rollTypes key)}}
@@ -24,31 +24,35 @@
           {{/each}}
         </select>
       </div>
-      <div class="checkbox-attribute">
-        <label class="base-form__label" for="system.targeted">
-          {{localize 'EVENTIDE_RP_SYSTEM.Item.Roll.Targeted.label'}}
-        </label>
-        <div class="toggle-switch-wrapper">
-          <input 
-            type="checkbox" 
-            class="base-form__toggle-switch-left" 
-            name="system.targeted" 
-            id="system.targeted" 
-            {{checked system.targeted}} 
+      <div class="eventide-sheet__toggle-group">
+        <label class="erps-toggles erps-toggles--label-left">
+          <input
+            type="checkbox"
+            class="erps-toggles__input"
+            name="system.targeted"
+            id="system.targeted"
+            {{checked system.targeted}}
           />
-          <label class="toggle-switch-display" for="system.targeted"></label>
-        </div>
+          <div class="erps-toggles__container">
+            <span class="erps-toggles__label" title='{{localize "EVENTIDE_RP_SYSTEM.Item.Roll.Targeted.label"}}'>
+              {{localize "EVENTIDE_RP_SYSTEM.Item.Roll.Targeted.label"}}
+            </span>
+            <span class="erps-toggles__track">
+              <span class="erps-toggles__thumb"></span>
+            </span>
+          </div>
+        </label>
       </div>
        <div>
-        <label class='base-form__label'>
+        <label class='erps-input-label'>
           {{localize 'EVENTIDE_RP_SYSTEM.Item.Descriptors.UsageInfo.label'}}
         </label>
-        <input 
-          class="base-form__text-input" 
-          type='text' 
-          name='system.usageInfo' 
-          value='{{system.usageInfo}}' 
-          placeholder='{{localize "EVENTIDE_RP_SYSTEM.Item.Descriptors.UsageInfo.placeholder"}}' 
+        <input
+          class="erps-input"
+          type='text'
+          name='system.usageInfo'
+          value='{{system.usageInfo}}'
+          placeholder='{{localize "EVENTIDE_RP_SYSTEM.Item.Descriptors.UsageInfo.placeholder"}}'
         />
       </div>
     </div>
@@ -56,11 +60,11 @@
     {{#if (ne system.roll.type "none")}}
       <div class='grid grid-2col'>
         <div>
-          <label class='base-form__label'>
+          <label class='erps-input-label'>
             {{localize 'EVENTIDE_RP_SYSTEM.Item.Roll.Ability.label'}}
           </label>
-          <select 
-            class="base-form__select" 
+          <select
+            class="erps-select"
             name='system.roll.ability'
           >
             {{#each abilities as |name key|}}
@@ -75,15 +79,15 @@
           </select>
         </div>
         <div>
-          <label class='base-form__label'>
+          <label class='erps-input-label'>
             {{localize 'EVENTIDE_RP_SYSTEM.Item.Roll.Bonus.label'}}
           </label>
-          <input 
-            type="number" 
-            class="base-form__number-input"
-            name="system.roll.bonus" 
-            value="{{system.roll.bonus}}" 
-            data-dtype="Number" 
+          <input
+            type="number"
+            class="erps-input"
+            name="system.roll.bonus"
+            value="{{system.roll.bonus}}"
+            data-dtype="Number"
           />
         </div>
       </div>
@@ -91,60 +95,82 @@
 
     {{#if (eq system.roll.type "roll")}}
       <div class='dice-adjustments'>
-        <label class='base-form__label'>
+        <label class='erps-input-label'>
           {{localize 'EVENTIDE_RP_SYSTEM.Item.Roll.DiceAdjustments.label'}}
         </label>
         <div class='grid grid-3col'>
           <div>
-            <label class='base-form__label'>
+            <label class='erps-input-label'>
               {{localize 'EVENTIDE_RP_SYSTEM.Item.Roll.DiceAdjustments.Advantage.label'}}
             </label>
-            <input 
-              class="base-form__number-input"
-              type="number" 
-              name="system.roll.diceAdjustments.advantage" 
-              value="{{system.roll.diceAdjustments.advantage}}" 
-              data-dtype="Number"
-              {{#if editable}}data-action='onDiceAdjustmentChange'{{/if}}
-            />
+            <div class="erps-number-input">
+              <button
+                type="button"
+                class="erps-number-input__button erps-number-input__button--decrement"
+                data-action="decrementDiceAdjustment"
+                data-field="advantage"
+              >
+                <i class="fas fa-minus"></i>
+              </button>
+              <input
+                class="erps-number-input__input"
+                type="number"
+                name="system.roll.diceAdjustments.advantage"
+                value="{{system.roll.diceAdjustments.advantage}}"
+                data-dtype="Number"
+                {{#if editable}}data-action='onDiceAdjustmentChange'{{/if}}
+              />
+              <button
+                type="button"
+                class="erps-number-input__button erps-number-input__button--increment"
+                data-action="incrementDiceAdjustment"
+                data-field="advantage"
+              >
+                <i class="fas fa-plus"></i>
+              </button>
+            </div>
           </div>
           <div>
-            <label class='base-form__label'>
+            <label class='erps-input-label'>
               {{localize 'EVENTIDE_RP_SYSTEM.Item.Roll.DiceAdjustments.Disadvantage.label'}}
             </label>
-            <div class="base-form__number-input-wrapper">
-              <button type="button" class="decrement" data-action="decrement">−</button>
-              <input 
-                class="base-form__number-input"
+            <div class="erps-number-input">
+              <button
+                type="button"
+                class="erps-number-input__button erps-number-input__button--decrement"
+                data-action="decrementDiceAdjustment"
+                data-field="disadvantage"
+              >
+                <i class="fas fa-minus"></i>
+              </button>
+              <input
+                class="erps-number-input__input"
                 type="number"
-                id="system.roll.diceAdjustments.disadvantage" 
-                name="system.roll.diceAdjustments.disadvantage" 
+                name="system.roll.diceAdjustments.disadvantage"
                 value="{{system.roll.diceAdjustments.disadvantage}}"
                 data-dtype="Number"
                 {{#if editable}}data-action='onDiceAdjustmentChange'{{/if}}
               >
-              <button type="button" class="increment" data-action="increment">+</button>
+              <button
+                type="button"
+                class="erps-number-input__button erps-number-input__button--increment"
+                data-action="incrementDiceAdjustment"
+                data-field="disadvantage"
+              >
+                <i class="fas fa-plus"></i>
+              </button>
             </div>
-            {{!-- <input 
-              class="base-form__number-input"
-              type="number" 
-              name="system.roll.diceAdjustments.disadvantage" 
-              value="{{system.roll.diceAdjustments.disadvantage}}" 
-              data-dtype="Number"
-              {{#if editable}}data-action='onDiceAdjustmentChange'{{/if}}
-            /> --}}
           </div>
           <div>
-            <label class='base-form__label'>
+            <label class='erps-input-label'>
               {{localize 'EVENTIDE_RP_SYSTEM.Item.Roll.DiceAdjustments.Total.label'}}
             </label>
-            <input 
-              class="base-form__text-input"
-              style="text-align: center;"
-              type='text' 
-              name='system.roll.diceAdjustments.total' 
-              value='{{system.roll.diceAdjustments.total}}' 
-              data-dtype='Number' 
+            <input
+              class="erps-input"
+              type='number'
+              name='system.roll.diceAdjustments.total'
+              value='{{system.roll.diceAdjustments.total}}'
+              data-dtype='Number'
               disabled
             />
           </div>
