--- a/templates/item/attribute-parts/gear.hbs
+++ b/templates/item/attribute-parts/gear.hbs
@@ -1,22 +1,22 @@
 {{! Attributes Tab }}
-<section 
-  class='tab attributes {{tab.cssClass}}' 
-  data-group='primary' 
+<section
+  class='tab attributes {{tab.cssClass}}'
+  data-group='primary'
   data-tab='attributes'
 >
-  <div class='base-form__sheet-tabs'>
+  <div class='eventide-sheet__scrollable-container'>
     <div class='grid grid-2col'>
       <div class='grid-span-1'>
-        <label class='base-form__label'>
+        <label class='erps-input-label'>
           {{localize 'EVENTIDE_RP_SYSTEM.Item.Roll.Type.label'}}
         </label>
-        <select 
-          name='system.roll.type' 
-          class="base-form__select"
+        <select
+          name='system.roll.type'
+          class="erps-select"
         >
           {{#each rollTypes as |name key|}}
-            <option 
-              value="{{key}}" 
+            <option
+              value="{{key}}"
               {{#if (eq ../system.roll.type key)}}selected{{/if}}
             >
               {{localize (lookup @root.config.rollTypes key)}}
@@ -24,36 +24,40 @@
           {{/each}}
         </select>
       </div>
-      <div class="checkbox-attribute">
-        <label class="base-form__label" for="system.targeted">
-          {{localize 'EVENTIDE_RP_SYSTEM.Item.Roll.Targeted.label'}}
-        </label>
-        <div class="toggle-switch-wrapper">
-          <input 
-            type="checkbox" 
-            class="base-form__toggle-switch-left" 
-            name="system.targeted" 
-            id="system.targeted" 
-            {{checked system.targeted}} 
+      <div class="eventide-sheet__toggle-group">
+        <label class="erps-toggles erps-toggles--label-left">
+          <input
+            type="checkbox"
+            class="erps-toggles__input"
+            name="system.targeted"
+            id="system.targeted"
+            {{checked system.targeted}}
           />
-          <label class="toggle-switch-display" for="system.targeted"></label>
-        </div>
+          <div class="erps-toggles__container">
+            <span class="erps-toggles__label" title='{{localize "EVENTIDE_RP_SYSTEM.Item.Roll.Targeted.label"}}'>
+              {{localize "EVENTIDE_RP_SYSTEM.Item.Roll.Targeted.label"}}
+            </span>
+            <span class="erps-toggles__track">
+              <span class="erps-toggles__thumb"></span>
+            </span>
+          </div>
+        </label>
       </div>
     </div>
 
     {{#if (ne system.roll.type "none")}}
       <div class='grid grid-2col'>
         <div>
-          <label class='base-form__label'>
+          <label class='erps-input-label'>
             {{localize 'EVENTIDE_RP_SYSTEM.Item.Roll.Ability.label'}}
           </label>
-          <select 
-            name='system.roll.ability' 
-            class="base-form__select"
+          <select
+            name='system.roll.ability'
+            class="erps-select"
           >
             {{#each abilities as |name key|}}
-              <option 
-                value="{{key}}" 
+              <option
+                value="{{key}}"
                 {{#if (eq ../system.roll.ability key)}}selected{{/if}}
               >
                 {{#if (eq key "unaugmented")}}
@@ -66,15 +70,15 @@
           </select>
         </div>
         <div>
-          <label class='base-form__label'>
+          <label class='erps-input-label'>
             {{localize 'EVENTIDE_RP_SYSTEM.Item.Roll.Bonus.label'}}
           </label>
-          <input 
-            type='number' 
-            name='system.roll.bonus' 
-            value='{{system.roll.bonus}}' 
-            data-dtype='Number' 
-            class="base-form__number-input"
+          <input
+            type='number'
+            name='system.roll.bonus'
+            value='{{system.roll.bonus}}'
+            data-dtype='Number'
+            class="erps-input"
           />
         </div>
       </div>
@@ -82,46 +86,82 @@
 
     {{#if (eq system.roll.type "roll")}}
       <div class='dice-adjustments'>
-        <label class='base-form__label'>
+        <label class='erps-input-label'>
           {{localize 'EVENTIDE_RP_SYSTEM.Item.Roll.DiceAdjustments.label'}}
         </label>
         <div class='grid grid-3col'>
           <div>
-            <label class='base-form__label'>
+            <label class='erps-input-label'>
               {{localize 'EVENTIDE_RP_SYSTEM.Item.Roll.DiceAdjustments.Advantage.label'}}
             </label>
-            <input 
-              type='number' 
-              class="base-form__number-input"
-              name='system.roll.diceAdjustments.advantage' 
-              value='{{system.roll.diceAdjustments.advantage}}' 
-              data-dtype='Number'
-              {{#if editable}}data-action='onDiceAdjustmentChange'{{/if}}
-            />
+            <div class="erps-number-input">
+              <button
+                type="button"
+                class="erps-number-input__button erps-number-input__button--decrement"
+                data-action="decrementDiceAdjustment"
+                data-field="advantage"
+              >
+                <i class="fas fa-minus"></i>
+              </button>
+              <input
+                type='number'
+                class="erps-number-input__input"
+                name='system.roll.diceAdjustments.advantage'
+                value='{{system.roll.diceAdjustments.advantage}}'
+                data-dtype='Number'
+                {{#if editable}}data-action='onDiceAdjustmentChange'{{/if}}
+              />
+              <button
+                type="button"
+                class="erps-number-input__button erps-number-input__button--increment"
+                data-action="incrementDiceAdjustment"
+                data-field="advantage"
+              >
+                <i class="fas fa-plus"></i>
+              </button>
+            </div>
           </div>
           <div>
-            <label class='base-form__label'>
+            <label class='erps-input-label'>
               {{localize 'EVENTIDE_RP_SYSTEM.Item.Roll.DiceAdjustments.Disadvantage.label'}}
             </label>
-            <input 
-              type='number' 
-              class="base-form__number-input"
-              name='system.roll.diceAdjustments.disadvantage' 
-              value='{{system.roll.diceAdjustments.disadvantage}}' 
-              data-dtype='Number'
-              {{#if editable}}data-action='onDiceAdjustmentChange'{{/if}}
-            />
+            <div class="erps-number-input">
+              <button
+                type="button"
+                class="erps-number-input__button erps-number-input__button--decrement"
+                data-action="decrementDiceAdjustment"
+                data-field="disadvantage"
+              >
+                <i class="fas fa-minus"></i>
+              </button>
+              <input
+                type='number'
+                class="erps-number-input__input"
+                name='system.roll.diceAdjustments.disadvantage'
+                value='{{system.roll.diceAdjustments.disadvantage}}'
+                data-dtype='Number'
+                {{#if editable}}data-action='onDiceAdjustmentChange'{{/if}}
+              />
+              <button
+                type="button"
+                class="erps-number-input__button erps-number-input__button--increment"
+                data-action="incrementDiceAdjustment"
+                data-field="disadvantage"
+              >
+                <i class="fas fa-plus"></i>
+              </button>
+            </div>
           </div>
           <div>
-            <label class='base-form__label'>
+            <label class='erps-input-label'>
               {{localize 'EVENTIDE_RP_SYSTEM.Item.Roll.DiceAdjustments.Total.label'}}
             </label>
-            <input 
-              type='number' 
-              class="base-form__number-input"
-              name='system.roll.diceAdjustments.total' 
-              value='{{system.roll.diceAdjustments.total}}' 
-              data-dtype='Number' 
+            <input
+              type='number'
+              class="erps-input"
+              name='system.roll.diceAdjustments.total'
+              value='{{system.roll.diceAdjustments.total}}'
+              data-dtype='Number'
               disabled
             />
           </div>
