--- a/templates/item/attribute-parts/transformation.hbs
+++ b/templates/item/attribute-parts/transformation.hbs
@@ -1,45 +1,55 @@
 <div class="tab attributes {{tab.cssClass}}" data-group="primary" data-tab="attributes">
-  <div class="form-group">
-    <label>{{localize "EVENTIDE_RP_SYSTEM.Item.Transformation.Size"}}</label>
-    <div class="form-fields">
-      <select class="base-form__select" name="system.size" data-dtype="Number">
-        {{#each sizeOptions as |size|}}
-          <option value="{{size}}" {{#if (eq ../system.size size)}}selected{{/if}}>{{size}}×</option>
-        {{/each}}
-      </select>
-    </div>
-  </div>
-
-  <div class="grid grid-2col">
+  <div class="eventide-sheet__scrollable-container">
     <div class="form-group">
-      <label>{{localize "EVENTIDE_RP_SYSTEM.Item.Transformation.ResolveAdjustment"}}</label>
-      <div class="base-form__number-input-wrapper">
-        <button type="button" class="decrement" data-action="decrementEffect" data-index="{{@index}}" data-type="visible">−</button>
-        <input 
-          type="number" 
-          class="base-form__number-input"
-          name="system.resolveAdjustment" 
-          value="{{system.resolveAdjustment}}" 
-          step="1"
-          data-dtype="Number"
-        >
-        <button type="button" class="increment" data-action="incrementEffect" data-index="{{@index}}" data-type="visible">+</button>
+      <label class="erps-input-label">{{localize "EVENTIDE_RP_SYSTEM.Item.Transformation.Size"}}</label>
+      <div class="form-fields">
+        <select class="erps-select" name="system.size" data-dtype="Number">
+          {{#each sizeOptions as |size|}}
+            <option value="{{size}}" {{#if (eq ../system.size size)}}selected{{/if}}>{{size}}×</option>
+          {{/each}}
+        </select>
       </div>
     </div>
 
-    <div class="form-group">
-      <label>{{localize "EVENTIDE_RP_SYSTEM.Item.Transformation.PowerAdjustment"}}</label>
-      <div class="base-form__number-input-wrapper">
-        <button type="button" class="decrement" data-action="decrementEffect" data-index="{{@index}}" data-type="visible">−</button>
-        <input 
-          type="number" 
-          class="base-form__number-input"
-          name="system.powerAdjustment" 
-          value="{{system.powerAdjustment}}" 
-          step="1"
-          data-dtype="Number"
-        >
-        <button type="button" class="increment" data-action="incrementEffect" data-index="{{@index}}" data-type="visible">+</button>
+    <div class="grid grid-2col">
+      <div class="form-group">
+        <label class="erps-input-label">{{localize "EVENTIDE_RP_SYSTEM.Item.Transformation.ResolveAdjustment"}}</label>
+        <div class="erps-number-input">
+          <button type="button" class="erps-number-input__button erps-number-input__button--decrement" data-action="decrementTransformationStat" data-field="resolveAdjustment">
+            <i class="fas fa-minus"></i>
+          </button>
+          <input
+            type="number"
+            class="erps-number-input__input"
+            name="system.resolveAdjustment"
+            value="{{system.resolveAdjustment}}"
+            step="1"
+            data-dtype="Number"
+          >
+          <button type="button" class="erps-number-input__button erps-number-input__button--increment" data-action="incrementTransformationStat" data-field="resolveAdjustment">
+            <i class="fas fa-plus"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label class="erps-input-label">{{localize "EVENTIDE_RP_SYSTEM.Item.Transformation.PowerAdjustment"}}</label>
+        <div class="erps-number-input">
+          <button type="button" class="erps-number-input__button erps-number-input__button--decrement" data-action="decrementTransformationStat" data-field="powerAdjustment">
+            <i class="fas fa-minus"></i>
+          </button>
+          <input
+            type="number"
+            class="erps-number-input__input"
+            name="system.powerAdjustment"
+            value="{{system.powerAdjustment}}"
+            step="1"
+            data-dtype="Number"
+          >
+          <button type="button" class="erps-number-input__button erps-number-input__button--increment" data-action="incrementTransformationStat" data-field="powerAdjustment">
+            <i class="fas fa-plus"></i>
+          </button>
+        </div>
       </div>
     </div>
   </div>
