--- a/css/eventide-rp-system.css
+++ b/css/eventide-rp-system.css
@@ -1223,10 +1223,6 @@ label,
   letter-spacing: 0.3px !important;
 }
 
-.features {
-  overflow-y: auto;
-}
-
 .eventide-sheet {
   --erps-display-font: "Cinzel", "Libre Baskerville", serif;
   --erps-info-font: "Crimson Text", "Times New Roman", serif;
@@ -2371,7 +2367,7 @@ label,
   flex: 1;
 }
 .popup-form__character-preview-info h4 {
-  margin: 0 0 0.5rem;
+  margin: 0 0 0.5rem 0;
   color: var(--theme-text);
   font-size: 1.1rem;
 }
